# USAS-Validator

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_PROCESS.md  coding_style_format_example.py  makefile  pyproject.toml
.claude/: settings.json
.claude/commands/: write-tests.md
.claude/hooks/: block_sensitive_files.py  generate_settings.py  sensitive_patterns.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
docs/source/: conf.py  index.rst
docs/source/api/: usas_tag.rst  utils.rst
docs/source/overview/: installation.md  quick_guide.md
scripts/: release_notes.py
src/usas_validator/: usas_tag.py  utils.py
tests/: test_usas_tag.py  test_utils.py  test_version.py  utils_test.py
tests/data/utils/usas_mapper/: test_usas_mapper.yaml  test_usas_mapper_duplicate_key.yaml  test_usas_mapper_no_description.yaml  test_usas_mapper_no_title.yaml
